--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -18,7 +18,7 @@
 <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container pb-1">
-            <a class="navbar-brand" href="../index.html"><img src="images/logo.png" alt="Logo" height="30px"></a>
+            <a class="navbar-brand" href="../index.html"><img src="../images/logo.png" alt="Logo" height="30px"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -38,8 +38,8 @@
                     <li class="nav-item">
                         <a class="nav-link" href="obras.html">Obras</a>
                     </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="contacto.html">Contacto</a>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="contacto.html">Contacto</a>
                     </li>
                 </ul>
             </div>
