--- a/pages/obras.html
+++ b/pages/obras.html
@@ -18,7 +18,7 @@
 <header>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container pb-1">
-      <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="Logo" height="30px"></a>
+      <a class="navbar-brand" href="../index.html"><img src="../images/logo.png" alt="Logo" height="30px"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -26,19 +26,19 @@
       <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
         <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+            <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#nosotros">Nosotros</a>
+            <a class="nav-link" href="../index.html#nosotros">Nosotros</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#clientes">Clientes</a>
+            <a class="nav-link" href="../index.html#clientes">Clientes</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./pages/obras.html">Obras</a>
+            <a class="nav-link active" href="obras.html">Obras</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./pages/contacto.html">Contacto</a>
+            <a class="nav-link" href="contacto.html">Contacto</a>
           </li>
         </ul>
       </div>
