Retoques en carruseles y grillas

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="index.html">Inicio</a>
+                        <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#nosotros">Nosotros</a>
@@ -39,7 +39,7 @@
                         <a class="nav-link" href="./pages/obras.html">Obras</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="./pages/contacto.html">Contacto</a>
+                        <a class="nav-link" href="./pages/contacto.html">Contacto</a>
                     </li>
                 </ul>
             </div>
@@ -105,7 +105,7 @@
         <div class="grid-item"><img src="images/clientes/ypf.png" alt="Samsung"></div>
         <div class="grid-item"><img src="images/clientes/honda.png" alt="Samsung"></div>
         <div class="grid-item"><img src="images/clientes/sbg.png" alt="Samsung"></div>
-        <div class="grid-item"><img src="images/clientes/jasmin.png" alt="Samsung"></div>
+        <div class="grid-item"><img src="images/clientes/jazmin.png" alt="Samsung"></div>
         <div class="grid-item"><img src="images/clientes/lazzaro.png" alt="Samsung"></div>
         <div class="grid-item"><img src="images/clientes/saverio.png" alt="Samsung"></div>
         <div class="grid-item"><img src="images/clientes/oslo.png" alt="Samsung"></div>
