--- a/pages/obras.html
+++ b/pages/obras.html
@@ -155,15 +155,13 @@
           <button type="button" data-bs-target="#carousel-sbg" data-bs-slide-to="1" aria-label="Slide 2"></button>
           <button type="button" data-bs-target="#carousel-sbg" data-bs-slide-to="2" aria-label="Slide 3"></button>
           <button type="button" data-bs-target="#carousel-sbg" data-bs-slide-to="3" aria-label="Slide 4"></button>
-          <button type="button" data-bs-target="#carousel-sbg" data-bs-slide-to="4" aria-label="Slide 5"></button>
-          <button type="button" data-bs-target="#carousel-sbg" data-bs-slide-to="5" aria-label="Slide 6"></button>
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img src="../images/sbg1.JPG" class="d-block w-100" alt="SBG Palermo">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Showroom principal</h5>
-              <p>Hormigón a la vista que resalta el ambiente.</p>
+              <h5>Showroom</h5>
+              <p>Barandas vidriadas y hormigón a la vista.</p>
             </div>
           </div>
           <div class="carousel-item">
@@ -177,28 +175,14 @@
             <img src="../images/sbg3.jpg" class="d-block w-100" alt="SBG Palermo">
             <div class="carousel-caption d-none d-md-block">
               <h5>Medios de elevación</h5>
-              <p>Todos los pisos están comunicados por escaleras con barandas iluminadas.</p>
+              <p>Todos los pisos están comunicados por escaleras que poseen barandas con iluminación.</p>
             </div>
           </div>
           <div class="carousel-item">
             <img src="../images/sbg4.jpg" class="d-block w-100" alt="SBG Palermo">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Bar y comedor</h5>
-              <p>Los clientes cuentan con un espacio para tomar café o compartir un snack.</p>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img src="../images/sbg5.jpg" class="d-block w-100" alt="SBG Palermo">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Iluminación</h5>
-              <p>La grilla led que recorre todo el local brinda iluminación sin sombras.</p>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img src="../images/sbg6.jpg" class="d-block w-100" alt="SBG Palermo">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Garage</h5>
-              <p>Cocheras exclusivas para los clientes con un toque de diseño.</p>
+              <h5>Recepción</h5>
+              <p>La grilla de iluminación recorre cada rincón del local.</p>
             </div>
           </div>
         </div>
