--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -53,7 +53,7 @@
 </h2>
 <div class="row justify-content-center py-3" style="background-color: lightgray;">
     <div class="col-md-4 pb-3">
-        <form action="https://formsubmit.co/leandrouade@gmail.com" method="POST">
+        <form action="https://formsubmit.co/orionobrassrl@gmail.com" method="POST">
             <div class="form-floating my-3">
                 <input type="name" id="name" class="form-control" placeholder="Nombre">
                 <label for="nombre" class="form-label">Nombre:</label>
