--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
+
     <!-- Link al css -->
     <link rel="stylesheet" href="./css/style.css">
-    <title>Orion Obras</title>
+    <title>Orion Obras · Diseño · Construcción · Remodelación</title>
 </head>
 <body>
 
