Actualización del SEO

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -19,8 +19,8 @@
 
     <!-- Open graph -->
     <meta property="og:title" content="Orion Obras · Diseño & Construcción">
-    <meta property="og:description" content="En Orion Obras nos dedicamos a la contrucción y remodelación
-    de locales comerciales, oficinas y viviendas bajo la modalidad de contratación tipo llave en mano">
+    <meta property="og:description" content="En Orion Obras trabajamos para que sus proyectos se vuelvan realidad,
+    brindando asesoramiento durante el proceso creativo, diseño, maquetado, renderizado y contrucción">
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="../images/favicon.ico" type="image/x-icon">
