--- a/pages/obras.html
+++ b/pages/obras.html
@@ -20,8 +20,9 @@
     
     <!-- Open graph -->
     <meta property="og:title" content="Orion Obras · Diseño & Construcción">
-    <meta property="og:description" content="En Orion Obras nos dedicamos a la contrucción y remodelación
-    de locales comerciales, oficinas y viviendas bajo la modalidad de contratación tipo llave en mano">
+    <meta property="og:description" content="En Orion Obras nos avocamos a resolver todas sus necesidades
+	respetando las reglas del buen arte de la construcción con un presupuesto acorde a su bolsillo,
+	sea empresa o particular">
     
     <!-- Favicon -->
     <link rel="shortcut icon" href="../images/favicon.ico" type="image/x-icon">
