Correción de contenido

--- a/pages/obras.html
+++ b/pages/obras.html
@@ -117,7 +117,7 @@
 </section>
 
 <section>
-    <h2>Honda Salón del Automóbil</h2>
+    <h2>Honda Salón del Automóvil de Buenos Aires</h2>
     <div id="carousel-honda" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-indicators">
           <button type="button" data-bs-target="#carousel-honda" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -177,7 +177,7 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="../images/sbg1.JPG" class="d-block w-100" alt="SBG Palermo">
+            <img src="../images/sbg1.jpg" class="d-block w-100" alt="SBG Palermo">
             <div class="carousel-caption d-none d-md-block">
               <h5>Showroom</h5>
               <p>Barandas vidriadas y hormigón a la vista.</p>
