Correción de extensiones

--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
             <img src="images/slide1.jpg" class="d-block w-100" alt="SBG Palermo">
         </div>
         <div class="carousel-item">
-            <img src="images/slide2.JPG" class="d-block w-100" alt="Honda La Rural">
+            <img src="images/slide2.jpg" class="d-block w-100" alt="Honda La Rural">
         </div>
         <div class="carousel-item">
-            <img src="images/slide3.JPG" class="d-block w-100" alt="McDonald's Puerto Madero">
+            <img src="images/slide3.jpg" class="d-block w-100" alt="McDonald's Puerto Madero">
         </div>
         <div class="carousel-item">
             <img src="images/slide4.jpg" class="d-block w-100" alt="Sabrina Lavalle">
